<resources>
    <string name="app_name">Wissenschaftlicher_Rechner</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_zero">0</string>
    <string name="btn_eq">=</string>
    <string name="btn_dot">.</string>
    <string name="btn_pow">^</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_mul">x</string>
    <string name="btn_div">/</string>
    <string name="btn_close_paren">)</string>
    <string name="btn_open_paren">(</string>
    <string name="btn_backspace">⌫</string>
</resources>